[gd_scene load_steps=2 format=3 uid="uid://cs2gdi4gv64hs"]

[ext_resource type="Script" uid="uid://c2n3jc8o8c5hx" path="res://scripts/pause.gd" id="1_f1d2v"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1d2v")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Pause"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Retry" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="ToSelectLevel" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Select Level"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ToSelectLevel" to="." method="_on_to_select_level_pressed"]
